<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="es.iessaladillo.ramonguardia.baldomeroformulario.MainActivity"
    android:padding="0dp"
    android:paddingEnd="0dp"
    android:paddingStart="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mrt"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:maxHeight="300px"
                />

            <TextView
                android:text="@string/nombreSujeto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblBaldomero"
                android:textStyle="normal|bold"
                android:gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignBottom="@id/imageView"

                />

            <TextView
                android:text="@string/lblEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:id="@+id/lblEdad"
                android:layout_below="@+id/imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignLeft="@+id/txtEdad"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:text="@string/lblEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="222dp"
                android:id="@+id/lblEmail"
                android:hint="@string/textHintMail"
                android:layout_marginLeft="10dp"
                android:maxWidth="50dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_marginRight="15dp"
                android:id="@+id/txtEmail"
                android:layout_alignBaseline="@+id/lblEmail"
                android:layout_alignBottom="@+id/lblEmail"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/switchJamon"
                android:layout_toEndOf="@+id/switchJamon" />

            <CheckBox
                android:text="@string/chkRepetidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkRepetidor"
                android:paddingLeft="10dp"
                android:paddingRight="30dp"

                android:layout_alignBaseline="@+id/lblEdad"
                android:layout_alignBottom="@+id/lblEdad"
                android:layout_toLeftOf="@+id/chkCasado"
                android:layout_toStartOf="@+id/chkCasado"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

            <CheckBox
                android:text="@string/casado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkCasado"
                android:paddingLeft="10dp"
                android:layout_alignBaseline="@+id/chkRepetidor"
                android:layout_alignBottom="@+id/chkRepetidor"
                android:layout_alignRight="@+id/txtEmail"
                android:layout_alignEnd="@+id/txtEmail" />

            <TextView
                android:text="@string/lblNombreCasado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblNombre"
                android:visibility="gone"
                android:layout_alignBaseline="@+id/txtNombre"
                android:layout_alignBottom="@+id/txtNombre"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/txtNombre"
                android:visibility="gone"
                android:text=""
                android:layout_alignBaseline="@+id/lblSexo"
                android:layout_alignBottom="@+id/lblSexo"
                android:layout_alignRight="@+id/chkCasado"
                android:layout_alignEnd="@+id/chkCasado"
                android:layout_toEndOf="@+id/btnAceptar"
                android:layout_toRightOf="@+id/btnAceptar" />

            <TextView
                android:text="@string/lblSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblSexo"
                android:layout_marginTop="67dp"
                android:layout_below="@+id/txtEmail"
                android:layout_alignLeft="@+id/lblEmail"
                android:layout_alignStart="@+id/lblEmail" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/groupRadio"
                android:layout_alignTop="@+id/lblSexo"
                android:layout_toRightOf="@+id/switchJamon"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp">

                <RadioButton
                    android:text="@string/chkMujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioMujer"
                    android:layout_gravity="center" />

                <RadioButton
                    android:text="@string/chkHombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioHombre"
                    android:layout_gravity="center" />

            </RadioGroup>

            <Switch
                android:text="@string/switchJam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/switchJamon"
                android:layout_below="@+id/groupRadio"
                android:layout_alignLeft="@+id/lblSexo"
                android:layout_alignStart="@+id/lblSexo"
                />

            <Button
                android:text="@string/btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAceptar"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="3"
                android:id="@+id/txtEdad"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:layout_alignBaseline="@+id/chkRepetidor"
                android:layout_alignBottom="@+id/chkRepetidor"
                android:layout_toLeftOf="@+id/chkRepetidor"
                android:layout_toStartOf="@+id/chkRepetidor" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
